# api-gateway

./: .env-example  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: digital-ocean.yml
src/: errors.py  main.py  request.py  requests.py  settings.py
src/auth/: firebase.py
src/configs/: settings.py
src/routers/: users_router.py
src/routers/adapter/: adapter.py
src/routers/dashboards/: connections.py  dashboards.py  folders.py  queries.py
src/schemas/: adapter.py  connections.py  dashboards.py  folders.py  queries.py
src/utils/: base64.py
